# hal-9000

./: .env.example  .gitignore  README.md  TEST_RESULTS.md  TEST_SUMMARY.md  blisk_cruise_missile_feasibility.md  blisk_production_feasibility.md  blisk_research_analysis.md  blisk_revised_feasibility.md  mkdocs.yml  pyproject.toml  run_tests.sh  test_blisk_cruise_missile.py  test_blisk_full_analysis.py  test_blisk_production_scale.py  test_blisk_research.py  test_blisk_revised_feasibility.py  user-walkthrough-skill.md
.ralph/: AGENTS.md  README.md  ralph.sh
.ralph/orchestrator/: CLAUDE.md  prd.json  progress.txt
.ralph/phase-1-gateway/: CLAUDE.md  prd.json  progress.txt
.ralph/phase-2-skills/: CLAUDE.md  prd.json  progress.txt
.ralph/phase-3-channels/: CLAUDE.md  prd.json  progress.txt
.ralph/phase-4-ui/: CLAUDE.md  prd.json  progress.txt
.ralph/phase-5-intelligence/: CLAUDE.md  prd.json  progress.txt
config/: default.yaml  materials_science_taxonomy.yaml
docs/: index.md
docs/api/: acquisition.md  adam.md  categorize.md  config.md  db.md  gateway.md  ingest.md  obsidian.md  python-reference.md  rlm.md
docs/development/: README.md  REFACTOR_PLAN.md
docs/guides/: adam-integration.md  architecture.md  cli-reference.md  configuration.md  development.md  getting-started.md  obsidian-integration.md  quick-start.md  taxonomy.md
docs/stylesheets/: extra.css
docs/wiki/: data-flow.md  faq.md  knowledge-graph.md  materials-taxonomy.md  rlm-patterns.md
src/hal9000/: __init__.py  cli.py  config.py
templates/obsidian/: paper_note.md
tests/: README.md  __init__.py  conftest.py  test_adam_context.py  test_classifier.py  test_config.py  test_db_models.py  test_integration.py  test_local_scanner.py  test_metadata_extractor.py  test_pdf_processor.py  test_rlm_processor.py  test_taxonomy.py  test_vault.py
tests/gateway/: test_events.py  test_health.py  test_integration.py  test_persistence.py  test_protocol.py  test_router.py  test_server.py  test_session.py
tests/test_acquisition/: __init__.py  test_downloader.py  test_orchestrator.py  test_providers.py  test_search.py  test_validator.py
(+37 files in other folders)
